Docs: Add a terse installation guide to the README